fix(darkmode)e):fix persistent dark mode

--- a/blog/src/index.scss
+++ b/blog/src/index.scss
@@ -5,3 +5,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.dark {
+  @apply bg-gray-800 text-gray-50;
+}
